--- a/style.css
+++ b/style.css
@@ -75,3 +75,8 @@ nav a{
         opacity: 1;
     }
 }
+
+button{
+    background-color: #b87b00 !important;
+    border-radius: 20px !important;
+}
