modified order button

--- a/style.css
+++ b/style.css
@@ -106,6 +106,11 @@ button{
     50%  { transform: translateY(-20px); }
     100% { transform: translateY(0); }
 }
+
+
+/* .addedMe{
+    display: none;
+} */
 .text-area{
     font-size: 2rem;
     color: #b87b00;
